--- a/packages/common/pubspec.yaml
+++ b/packages/common/pubspec.yaml
@@ -2,6 +2,7 @@ name: common
 description: "Common widgets library."
 publish_to: 'none'
 version: 1.0.0+1
+resolution: workspace
 
 environment:
   sdk: ^3.7.2
