--- a/melos.yaml
+++ b/melos.yaml
@@ -19,3 +19,4 @@ scripts:
   test:
     run: melos exec -- flutter test
     description: Run Flutter tests for all packages.
+sdkPath: .fvm/flutter_sdk
